# etl-toolkit

./: .git_commit.txt  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: demo.py  example_pipeline.py
src/etl_toolkit/: __init__.py  pipeline.py  retry.py  steps.py
tests/: test_pipeline.py  test_quality.py
